*Empty MediaWiki Message*

--- a/Калатсова_(Меремяэ_буе).mw
+++ b/Калатсова_(Меремяэ_буе).mw
@@ -12,7 +12,7 @@
  |ширина герба            = 
  |ширина флага            = 
   |lat_dir = |lat_deg = 57.739999|lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 27.415510|lon_min = 23|lon_sec = 
+  |lon_dir = |lon_deg = 27.415510|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
