--- a/Карамсина_(Меремяэ_буе).mw
+++ b/Карамсина_(Меремяэ_буе).mw
@@ -11,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 57.739999|lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 27.415510|lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 57.811254|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 27.462039|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -39,7 +39,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 10 <ref name=2011census>{{cite web|title=Population by place of residence (settlement), sex and age|url=http://pub.stat.ee/px-web.2001/Dialog/varval.asp?ma=PC003&lang=1|publisher=[[Statistics Estonia]]|accessdate=|date=31 December 2011}} {{ref-en}}</ref>
+  |эрицятне               = 2 <ref name=2011census>{{cite web|title=Population by place of residence (settlement), sex and age|url=http://pub.stat.ee/px-web.2001/Dialog/varval.asp?ma=PC003&lang=1|publisher=[[Statistics Estonia]]|accessdate=|date=31 December 2011}} {{ref-en}}</ref>
   |год переписи           = 2011
   |плотность              = 
   |агломерация            = 
@@ -49,7 +49,7 @@
  |шкань каркс             = +2
  |DST                     = +1
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 65365
  |почтовые индексы        = 
  |автомобильный код       = 
  |вид идентификатора      = 
