*Empty MediaWiki Message*

--- a/Кангавитса_(Меремяэ_буе).mw
+++ b/Кангавитса_(Меремяэ_буе).mw
@@ -49,7 +49,7 @@
  |шкань каркс             = +2
  |DST                     = +1
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 65307 
  |почтовые индексы        = 
  |автомобильный код       = 
  |вид идентификатора      = 
