*Empty MediaWiki Message*

--- a/Россия_Мастор.mw
+++ b/Россия_Мастор.mw
@@ -6,7 +6,7 @@
  |Оригинальное название=Россия
  |Родительный падеж=Россиянь
  |Герб=Coat of Arms of the Russian Federation.svg
- |Аулькедьалонь чись=[[862]]&nbsp;г.н.э.
+ |Аулькедьалонь чись=[[862]]&nbsp;и.м.э.
  |Аудио=Russian_Anthem_chorus.ogg
  |На карте=Russian Federation (orthographic projection) - Crimea disputed.svg
  |Кель=[[Рузонь кель|рузонь]]
