*Empty MediaWiki Message*

--- a/Россия_Мастор.mw
+++ b/Россия_Мастор.mw
@@ -1,12 +1,9 @@
-{|align="right"
-|-
-|
-{{Мастор
+{{Мастор2
  |Эрзянь лем=Россия Мастор
  |Оригинальное название=Россия
  |Родительный падеж=Россиянь
  |Герб=Coat of Arms of the Russian Federation.svg
- |Аулькедьалонь чись=[[862]]&nbsp;и.м.э.
+ |Аулькедьалонь чись=[[862 ие]]
  |Аудио=Russian_Anthem_chorus.ogg
  |На карте=Russian Federation (orthographic projection) - Crimea disputed.svg
  |Кель=[[Рузонь кель|рузонь]]
@@ -33,9 +30,7 @@
  |Часовойть каркст=+2…+12&nbsp;<ref>На территории России действует [[декретное время]]</ref>
  |Примечания=<div class="references-small"><references/></div>
 }}
-|-
-| 
-|}
+
 '''Росси́я Ма́стор''', '''Россиянь Федерация''' ({{lang-ru|Росси́я, Росси́йская Федера́ция}}) — ламораськень мастор, кона ашти Европань чилисемань ёнкссо ды Азиянь пелевеёнкссо. 
 
 Россия Масторось — сехте покш мастор мирсэнть-масторсонть (17 млн 75 тёж. 400 [[Вайгельпе|вп]]² али 11,46 % (1/9) покшолманть веси моданть, мезесь [[2 (кавто)|кавксть]] седе ламо, Канаданть Масторонть моданьть).
