--- a/Россия_Мастор.mw
+++ b/Россия_Мастор.mw
@@ -22,7 +22,7 @@
  |Веденть процентэсь=0,5
  |Таркась эрицятнева=8
  |Эрицятне=142 856,5 тёж. ломанть <ref>[http://demoscope.ru/weekly/ssp/rus_nac_10.php]</ref>
- |Ловнома иесь=2010
+ |Раськень сёрмацтомась иесь=2010
  |Ломантнень плотностесь=8,3
  |Доменть=[[.ru]],&nbsp;[[.su]]&nbsp;<ref>Доменная зона [[.su]] постепенно выводится из обращения</ref>
  |Валютась-ярмакось=[[Россиянь целковой]]
