--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -117,7 +117,7 @@
 * [[Тессова (Меремяэ буе)|Тессова]] — ({{lang-et|Tessova}})
 * [[Тетерювья (Меремяэ буе)|Тетерювья]] — ({{lang-et|Teterüvä}})
 * [[Тиирханна (Меремяэ буе)|Тиирханна]] — ({{lang-et|Tiirhanna}})
-* [[Тикласё (Меремяэ буе)|Тикласё]] — ({{lang-et|Tiklasõ}})
+* [[Тикласы (Меремяэ буе)|Тикласы]] — ({{lang-et|Tiklasõ}})
 * [[Тоброва (Меремяэ буе)|Тоброва]] — ({{lang-et|Tobrova}})
 * [[Треиали (Меремяэ буе)|Треиали]] — ({{lang-et|Treiali}})
 * [[Тригиня (Меремяэ буе)|Тригиня]] — ({{lang-et|Triginä}})
