*Empty MediaWiki Message*

--- a/ЛопаПарцун:Меремяэнь_вельтне.mw
+++ b/ЛопаПарцун:Меремяэнь_вельтне.mw
@@ -31,7 +31,7 @@
 {{•}}  [[Куигы (Меремяэ буе)|Куигы]]
 {{•}}  [[Куксина (Меремяэ буе)|Куксина]] 
 {{•}}  [[Куснетцова (Меремяэ буе)|Куснетцова]] 
-{{•}}  [[Кёёру (Меремяэ буе)|Кёёру]]
+{{•}}  [[Кыыру (Меремяэ буе)|Кыыру]]
 {{•}}  [[Кюллятьювя (Меремяэ буе)|Кюллятьювя]] 
 {{•}}  [[Лепя (Меремяэ буе)|Лепя]] 
 {{•}}  [[Линдси (Меремяэ буе)|Линдси]] 
