--- a/Меремяэ_буе.mw
+++ b/Меремяэ_буе.mw
@@ -75,7 +75,7 @@
 * [[Куигы (Меремяэ буе)|Куигы]] — ({{lang-et|Kuigõ}})
 * [[Куксина (Меремяэ буе)|Куксина]] — ({{lang-et|Kuksina}})
 * [[Куснетцова (Меремяэ буе)|Куснетцова]] — ({{lang-et|Kusnetsova}})
-* [[Кёёру (Меремяэ буе)|Кёёру]] — ({{lang-et|Kõõru}})
+* [[Кыыру (Меремяэ буе)|Кыыру]] — ({{lang-et|Kõõru}})
 |style="padding-left:15px;"|<br />
 * [[Кюллятьювя (Меремяэ буе)|Кюллятьювя]] — ({{lang-et|Küllätüvä}})
 * [[Лепя (Меремяэ буе)|Лепя]] — ({{lang-et|Lepä}})
