*Empty MediaWiki Message*

--- a/Обиница_(Меремяэ_буе).mw
+++ b/Обиница_(Меремяэ_буе).mw
@@ -58,7 +58,9 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Обиница''' ({{lang-et|Obinitsa}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со.
+'''Обиница''' ({{lang-et|Obinitsa}}) — те велесь [[Эстэнь Мастор]]со [[Вырумаа ёнкс]]со. [[2015 ие]]стэ ульнесь Суоми-угрань Шкинемань прявтошокс<ref>[http://www.setomaa.ee/obinitsa-kulturnaja-stolitsa-finno-ugorskobo-mira-2015  Обиница: культурная столица финно-угорского мира в 2015 г. {{ref-ru}}]</ref>. 
+
+
 
 ==Фотокувт==
 <gallery>
