*Empty MediaWiki Message*

--- a/Вашингтон_ош.mw
+++ b/Вашингтон_ош.mw
@@ -58,7 +58,7 @@
  |сайт                    = http://www.dc.gov/
  |язык сайта              = en
 }}
-'''Вашингтон ош''' ({{lang-en|Washington, D.C.}}, <small>МФА:</small> {{IPA|[ˈwɑʃɪŋtən ˌdiː ˌsiː]}}) - [[Американь Вейтьсэндявкс Штаттнэ]]нь прявтошось.
+'''Вашингтон ош''' ({{lang-en|Washington, D.C.}}, <small>МФА:</small> {{IPA|[ˈwɑʃɪŋtən ˌdiː ˌsiː]}}) - [[Американь Вейтьсэндявкс Штаттнэ]]нь прявтошось. Ашти Колумбия штат-ёнкссо.
 
 [[Категория:Прявтошт]]
 [[Категория:Американь Вейтьсэндявкс Штаттнэнь ошт]]
