*Empty MediaWiki Message*

--- a/Марезь_веле_(Чаунзабуе).mw
+++ b/Марезь_веле_(Чаунзабуе).mw
@@ -32,7 +32,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   =
- |дата основания          =  XIV пингэ
+ |дата основания          =  XIV пинге
  |первое упоминание       =  
  |прежние имена           = 
  |статус с                = 
@@ -51,7 +51,7 @@
  |часовой пояс            = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         =431705
+ |почтовый индекс         = 431705
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = 
