*Empty MediaWiki Message*

--- a/Марезь_веле_(Чаунзабуе).mw
+++ b/Марезь_веле_(Чаунзабуе).mw
@@ -3,7 +3,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Марезь веле
- |оригинальное название   = 
+ |оригинальное название   = {{Lang-ru|с. Большое Маресево}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -60,7 +60,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Марезь веле''' (эрзякс веленьте мерить '''Покш веле''', '''Покш Маризь веле<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''') — те эрзянь велесь [[Мордовия Республикась|Мордовиянь]] [[Чаунзабуе]]сэ.
+'''Марезь веле''' (эрзякс веленьте мерить '''Покш веле''', '''Покш Маризь веле<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''') ({{Lang-ru|с. Большое Маресево}}) — те эрзянь велесь [[Мордовия Республикась|Мордовиянь]] [[Чаунзабуе]]сэ.
 Ашти [[Сухая Аморда лей]] лангсо. 
 
 == Веленть лемденть  ==
