*Empty MediaWiki Message*

--- a/Покш_Эрьмезенка_(Чаунзабуе).mw
+++ b/Покш_Эрьмезенка_(Чаунзабуе).mw
@@ -64,7 +64,7 @@
 Ашти [[Аморда лей]] лангсо.  Лецтяви ({{Lang-ru|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) кода «Ремезенки (Большое Никольское)»—  176 56<ref name="Память, запечатленная в слове"/> кудот марто Саранонь уездсэ.
 
 == Веленть лемденть  ==
-Лемесь-антропоним, саеви Эрменза кезерэнь эрзянь лемстэнть, «эрямс» валонть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> эйстэ.
+Лемесь-антропоним, саеви '''Эрменза''' кезерэнь эрзянь лемстэнть, «эрямс» валонть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> эйстэ.
 == Содавикс ломанть те велестэнть ==
 Покш Эрьмезенка велесэ чачсть:
 * П. И. Акимов, А. П. Байкова — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
