--- a/Чаунзабуе.mw
+++ b/Чаунзабуе.mw
@@ -67,7 +67,7 @@
 == Чаунзабуень велеть ==
 эрзянь велеть:
 * [[Вишка Маризь веле (Чаунзабуе)|Вишка Маризь веле]] — ({{lang-ru| с. Малое Маресево}})
-* [[Вишка Эрьмезенка (Чаунзабуе)|Вишка Эрьмезенка]] — ({{lang-ru| с. Малые Ремезенки}})
+* [[Вишка Эрьмезёнка (Чаунзабуе)|Вишка Эрьмезёнка]] — ({{lang-ru| с. Малые Ремезёнки}})
 * [[Зеленый Дол (Чаунзабуе)|Зеленый Дол]] — ({{lang-ru|п. Зеленый Дол}})
 * [[Киржеман (Чаунзабуе)|Киржеман]] — ({{lang-ru|д. Киржеманы}})
 * [[Красной Поселка (Чаунзабуе)|Красной Поселка]] — ({{lang-ru|п. Красный Поселок}})
