--- a/Покш_Эрьмезенка_(Чаунзабуе).mw
+++ b/Покш_Эрьмезенка_(Чаунзабуе).mw
@@ -61,7 +61,7 @@
  |язык сайта              = 
 }}
 '''Покш Эрьмезенка'''  ({{Lang-ru|с. Большие Ремезёнки}}) — те эрзянь велесь [[Мордовия Республикась|Мордовиянь]] [[Чаунзабуе]]сэ.
-Ашти [[Аморда лей]] лангсо.  Лецтяви ({{Lang-ru|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) кода «Ремезенки (Большое Никольское)»—  176 56<ref name="Память, запечатленная в слове"/> кудот марто Саранонь уездсэ.
+Ашти [[Аморда лей]] лангсо.  Лецтяви ({{Lang-ru|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) кода «Ремезенки (Большое Никольское)»—  176<ref name="Память, запечатленная в слове"/> кудот марто Саранонь уездсэ.
 
 == Веленть лемденть  ==
 Лемесь-антропоним, саеви '''Эрменза''' кезерэнь эрзянь лемстэнть, «эрямс» валонть<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> эйстэ.
