--- a/Чаунза_(Чаунзабуе).mw
+++ b/Чаунза_(Чаунзабуе).mw
@@ -64,8 +64,9 @@
 '''Чаунза''' ({{lang-ru|п. Чамзинка}}) —  те эрзянь посёлка ошонь койсэ [[Мордовия Республикась|Мордовиянь]] [[Чаунзабуе]]сэ.
 
 Ашти [[Нуя лей]] лангсо. 
-
+Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Чамзинка — 53 кудот марто Ордань уездсэ''.
 == Веленть лемденть  ==
+Лемесь-антропоним. Саеви  ''Чаунза'' ~ ''Чамза'', эрзянь «чаво» валстонть, Лецтяви ({{Lang-ru|«Книге письма и меры Д. Пушечникова и А. Костяева» }}) ([[1624 ие]]) ''Кечадей Чамзин<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''.
 
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
