--- a/Чаунза_(смустьтне).mw
+++ b/Чаунза_(смустьтне).mw
@@ -1,3 +1,4 @@
 ==Топонимт==
+* [[Ташто Чамза (Покш Игнадбуе)|Чаунза]] — веле [[Покш Игнадбуе]]сэ Мордовиясо
 * [[Чаунза (Отяжбуе)|Чаунза]] — веле [[Отяжбуе]]сэ Мордовиясо
 * [[Чаунза (Чаунзабуе)|Чаунза]] — веле [[Чаунзабуе]]сэ Мордовиясо
