*Empty MediaWiki Message*

--- a/Чаунза_(смустьтне).mw
+++ b/Чаунза_(смустьтне).mw
@@ -2,3 +2,4 @@
 * [[Ташто Чамза (Покш Игнадбуе)|Чаунза]] — веле [[Покш Игнадбуе]]сэ Мордовиясо
 * [[Чаунза (Отяжбуе)|Чаунза]] — веле [[Отяжбуе]]сэ Мордовиясо
 * [[Чаунза (Чаунзабуе)|Чаунза]] — веле [[Чаунзабуе]]сэ Мордовиясо
+[[Category:Авейкетькс]]
