--- a/Чаунзабуе.mw
+++ b/Чаунзабуе.mw
@@ -70,7 +70,7 @@
 * [[Вишка Эрьмезёнка (Чаунзабуе)|Вишка Эрьмезёнка]] — ({{lang-ru| с. Малые Ремезёнки}})
 * [[Зеленый Дол (Чаунзабуе)|Зеленый Дол]] — ({{lang-ru|п. Зеленый Дол}})
 * [[Киржеман (Чаунзабуе)|Киржеман]] — ({{lang-ru|д. Киржеманы}})
-* [[Красной Поселка (Чаунзабуе)|Красной Поселка]] — ({{lang-ru|п. Красный Поселок}})
+* [[Красной Посёлка (Чаунзабуе)|Красной Посёлка]] — ({{lang-ru|п. Красный Поселок}})
 * [[Кульмина (Чаунзабуе)|Кульмина]] — ({{lang-ru|с. Кульмино}})
 * [[Марезь веле (Чаунзабуе)|Марезь веле]] — (истяжо эрзякс веленьте мерить Покш веле,  {{lang-ru|с. Большое Маресево}})
 * [[Мокшалей (Чаунзабуе)|Мокшалей]] — ({{lang-ru|с. Мокшалей}})
