--- a/Мокша_(смустьтне).mw
+++ b/Мокша_(смустьтне).mw
@@ -7,8 +7,11 @@
 * [[Мокша (Торбейбуе)|Мокша]] — посёлка [[Торбейбуе]]сэ [[Мордовия]]со.
 * [[Мокша (Самара ёнкс)]] — веле [[Покш Глушицань буе]]сэ [[Самара ёнкс]]о.
 * [[Мокша (Татаронь Мастор)]] — веле Атнинэнь буесэ  [[Татаронь Республикась|Татаронь Масторсо]].
-* [[Мокша лей|Мокша]] — лей [[Россия]]со, [[Йока]] леенть витьсянглей.
 * [[Мокшалей (Чаунзабуе)|Мокшалей]] — буе [[Чаунзабуе]]сэ [[Мордовия]]со.
+
+;Гидронимт
+* [[Мокша лей|Мокша]] — лей [[Россия]]со, [[Йока]] леенть витьсянглей.
+
 
 __DISAMBIG__
 
