--- a/Украина.mw
+++ b/Украина.mw
@@ -14,7 +14,7 @@
  |Прявттнэнь таркаст=Президент
  |Прявттнэ=[[Порошенко Пётр]]
  |Таркась модаванть=
- |Покшолмазо=576 604
+ |Покшолмазо=603 549 ([[Крым]] вельде) / 576 604
  |Веденть процентэсь=7
  |Таркась эрицятнева=
  |Эрицятне=44 573 205
