--- a/Лобез_ош.mw
+++ b/Лобез_ош.mw
@@ -126,7 +126,7 @@ PlotData=
 |-
 | 1736 – Schulze ||  || 1852–1864 – Carl Albert Alexander Schüz
 |-
-| 1732 – Hackenberken ||  || 1921 – Willi Kieckbeusch
+| 1732 – Hackenberken ||  || 1921 – Willi Kieckbusch
 |-
 | 1745 – M. C. Frize ||  || 1945 – Hackelberg, Teofil Fiutowski, Stefan Nowak, Feliks Mielczarek
 |-
