--- a/Чукал_(смустьтне).mw
+++ b/Чукал_(смустьтне).mw
@@ -2,6 +2,7 @@
 ;Топонимт
 * [[Чукало (Орданьбуе)|Чукало]] — посёлка [[Орданьбуе]]сэ [[Мордовия]]со.
 * [[Чукал веле (Покш Игнадбуе)|Чукал веле]] — веле [[Покш Игнадбуе]]сэ [[Мордовия]]со.
+* [[Чукалы (Якстерекуро буе)|Чукал веле]] — веле [[Якстерекуро буе]]сэ [[Мордовия]]со.
 
 ;Гидронимт
 * [[Чукалы лей|Чукалы]] — лей [[Россия]]со, [[Ветькень Республикась|Ветькень Масторсо]].
