*Empty MediaWiki Message*

--- a/Чукалы_(Якстерекуро_буе).mw
+++ b/Чукалы_(Якстерекуро_буе).mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Чукалы
- |оригинальное название   = {{Lang-ru|д. Лаушки}}
+ |оригинальное название   = {{Lang-ru|с. Чукалы}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
