*Empty MediaWiki Message*

--- a/Канаклей_(смустьтне).mw
+++ b/Канаклей_(смустьтне).mw
@@ -4,7 +4,7 @@
 * [[Канаклей (Орданьбуе)|Канаклей]] — веле  [[Орданьбуе]]сэ, [[Мордовия]]со.
 
 ;Гидроним
-* [[Канаклей лей|Канаклей]] — лейне [[Орданьбуе]]сэ, [[Мордовия]]со. [[Ратор лей|Ратор лееень]] витьёнонь сянглей. 
+* [[Канаклейка лей|Канаклей]] — лейне [[Орданьбуе]]сэ, [[Мордовия]]со. [[Ратор лей|Ратор лееень]] витьёнонь сянглей. 
 
 
 __DISAMBIG__
