--- a/Чукало_(Орданьбуе).mw
+++ b/Чукало_(Орданьбуе).mw
@@ -64,7 +64,7 @@
 
 Ашти [[Сарлей]] ({{lang-ru|Малая Сарка}}) лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Чукалы — 200<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ''. 
 
-Эрицятьнеде: 1500 лом. (1863 ие), 966 лом. (2001 ие), 916 лом. (2002 ие), 841 лом. (2010 ие), 818 лом. (2012 ие.), 783 лом. (2013 ие), 758 лом. (2014 ие), 733 лом. (2015 ие).	
+Эрицятнеде: 1500 лом. (1863 ие), 966 лом. (2001 ие), 916 лом. (2002 ие), 841 лом. (2010 ие), 818 лом. (2012 ие.), 783 лом. (2013 ие), 758 лом. (2014 ие), 733 лом. (2015 ие).	
 
 == Веленть лемденть  ==
 Лемесь–географиянь термин: тюрконь «чук» ({{lang-ru|«овраг, ручей»}}<ref name="Память, запечатленная в слове"/>).
