*Empty MediaWiki Message*

--- a/Инесар_(смустьтне).mw
+++ b/Инесар_(смустьтне).mw
@@ -1,9 +1,9 @@
 '''Инесар''':
-;Гидроним
+;Гидронимт
 * [[Инесаро лей]]  — лей Россиясо.
 
 
-;Топоним
+;Топонимт
 * [[Инесаро буе]] — буе [[Мордовия]]со.
 * [[Инесар ош]]  — ош [[Мордовия]]со, [[Россия]]со.
 __DISAMBIG__
