*Empty MediaWiki Message*

--- a/Ало_Чукало_(Отяжбуе).mw
+++ b/Ало_Чукало_(Отяжбуе).mw
@@ -1,7 +1,8 @@
+{{Лия смустьтне|Чукал (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Ало Чукало
- |оригинальное название   = {{Lang-ru|Чукалы-на-Вежне}}
+ |оригинальное название   = {{Lang-ru|с. Чукалы-на-Вежне}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -39,11 +40,11 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 188<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
-  |национальный состав    = 
+  |национальный состав    = [[эрзят]]
   |конфессиональный состав= 
   |этнохороним            = 
  |часовой пояс            = +3
@@ -58,7 +59,22 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Ало Чукало''' ({{Lang-ru|Чукалы-на-Вежне}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Ало Чукало''', лиякс мерить: '''Чукало<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|с. Чукалы-на-Вежне}}) — эрзянь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
-[[Category:Мордовиянь велеть|К]]
-[[Category:Отяжбуень велеть|К]]
+Ашти [[Вежня лей]] лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Чукалы-на-Вежне — 78<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ''. 
+
+== Веленть лемденть  ==
+Лемесь–географиянь термин<ref name="Память, запечатленная в слове"/>). Ули лия версия, лемесь-антропоним, кезерень эрзянь ''Чукай'' лементь эйстэ.
+
+== Веленть эрямозо  ==
+== Содавикс ломанть те велестэнть== 
+* А. А. Долгачёв — советэнь-партиянь важожиця
+* И. Ф. Прокаев — тонавтыця, кель-содый 
+* И. А. Ефимов — историянь наукань кандидат 
+* Р. К. Родионова — МАССР-нь заслуженной тонавтыця
+
+== Сёрм.: ==
+<references />
+[[Category:Мордовиянь велеть|А]]
+[[Category:Отяжбуень велеть|А]]
+[[Category:Эрзянь велеть]]
