--- a/Отяжбуе.mw
+++ b/Отяжбуе.mw
@@ -66,6 +66,7 @@
 == Икелень эрямо кевкстемась ==
 
 == Отяжбуе велеть ==
+эрзянь велеть:
 * [[Ало Чукало (Отяжбуе)|Ало Чукало]] ({{lang-ru|с. Чукалы-на-Вежне}})       
 * [[Аловеле (Отяжбуе)|Аловеле]] ({{lang-ru|с. Алово}})
 * [[Аловеле (Отяжбуе)|Аловеле]] ({{lang-ru|Низовка}})
