*Empty MediaWiki Message*

--- a/Вере_Чукало_(Отяжбуе).mw
+++ b/Вере_Чукало_(Отяжбуе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Чукал (смустьтне)}}
 <br />
 {{ЭТ
  |статус                  = веле
@@ -61,7 +62,8 @@
 }}
 '''Вере Чукало''' ({{Lang-ru|д. Чукалы-на-Нуе}}) — эрзянь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
-Вере Чукалось ашти [[Нуя лей|Нуя леенть]]<ref>[http://mnogolik-mordovia.mrsu.ru/c_Chukali-na-Nue.htm Многоликая Мордовия: Деревня Чукалы-на-Нуе {{Ref-ru}}]]</ref> лангсо. 
+Вере Чукалось ашти [[Нуя лей|Нуя леенть]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref><ref>[http://mnogolik-mordovia.mrsu.ru/c_Chukali-na-Nue.htm Многоликая Мордовия: Деревня Чукалы-на-Нуе {{Ref-ru}}]]</ref> лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Чукалы-на-Нуе — 45<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ''. 
+
 
 == Веленть лемденть  ==
 Лемесь-антророним:  эрзянь ''Чукал'' лементь эйстэ. 
