--- a/Чукал_(смустьтне).mw
+++ b/Чукал_(смустьтне).mw
@@ -2,6 +2,7 @@
 ;Топонимт
 * [[Чукало (Орданьбуе)|Чукало]] — посёлка [[Орданьбуе]]сэ [[Мордовия]]со.
 * [[Ало Чукало (Отяжбуе)|Ало Чукало]] — посёлка [[Отяжбуе]]сэ [[Мордовия]]со.
+* [[Вере Чукало (Отяжбуе)|Вере Чукало]] — веле [[Отяжбуе]]сэ [[Мордовия]]со.
 * [[Чукал веле (Покш Игнадбуе)|Чукал веле]] — веле [[Покш Игнадбуе]]сэ [[Мордовия]]со.
 * [[Чукалы (Якстерекуро буе)|Чукал веле]] — веле [[Якстерекуро буе]]сэ [[Мордовия]]со.
 
