*Empty MediaWiki Message*

--- a/Чукал_веле_(Покш_Игнадбуе).mw
+++ b/Чукал_веле_(Покш_Игнадбуе).mw
@@ -62,16 +62,18 @@
 '''Чукало''' — эрзянь<ref name="Многоликая Мордовия">[http://mnogolik-mordovia.mrsu.ru/e_Chukali.htm Многоликая Мордовия: Село Чукалы]{{ref-ru}}</ref> веле [[Покш Игнадбуе]]сэ, 
 [[Мордовия]]со.
 
-Ашти [[Тракелей]] лангсо. 
-
+Ашти [[Тракелей]] лангсо.  Лецтяви ({{Lang-ru|«Списке населенных мест Нижегородской губернии»}}) ([[1863 ие]]) ''— Чукалы, веле  86<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Сергачонь уездсэ''. 
+== Веленть лемденть  ==
+Лементь коряс улить ламо сёрмадовкст: антропоним -  эрзянь ''Чукай'' лементь эйстэ, гидроним ''Чукалей'' валонть эйстэ ды {{Lang-cv|чук}}, ({{Lang-ru|«овраг, урочище, место моления по языческому обычаю»}}) + -лы ~ -ло – суффиксэсь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
 
 ==Буелемть Чукал велесэ==
 * '''Тишань ''' — смустезэ ''Тиши (Тихона) ''семянь прявтонть эйстэ<ref>[http://www.cigankin.ru/archives/781 Семантика индивидуальных и семейных (родовых) прозвищ жителей  эрзянских и мокшанских населенных пунктов] {{ref-ru}}, {{ref-myv}}</ref> ;
 
 ==Веленть эрямозо==
+Вейке, умонь пингеде-пингень эрзянь эрямо тарка, кона ульнесь куншка таркакс.  Лецтяви ({{Lang-ru|В переписной книге}}) ([[1671 ие]]) ''«Низсурский стан называется также и Чукальским» (Гераклитов, 1936, с.  106)<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>.    
 * Авасоло велестэнть ютавтови [[Раськень Озкс]] (неешкань эрямостонть сон ютась [[1999 ие|1995]], [[2004 ие|2004]], [[2007 ие|2007]], [[2010 ие|2010]], [[2013 ие|2013]] иетнестэ). Икеле ютавтовиль 30-50 иенть весть, теде улить ледстнемат:
 {{Цитатань ушодома}}
-[[1629 ие]]стэ Чукало велев сакшность [[эрзят]] Алоошонь ды Ордань уезднэстэ поласт ды пакшаст марто озномо «покштятьнень ланга». А кемиця московонь прявтне нейсть те пурнаксонть политикань алгакс ды тейсть кежей вешнема. Ды лись, истямо пурнавксось ульнесь ауль васенце, [[1580 ие]]нть малава эрзятне истяжо сакшность-пурнавкшность Чукалов.<ref name="Многоликая Мордовия"/> 
+[[1629 ие]]стэ Чукало велев сакшность [[эрзят]] Алоошонь ды Раторонь уезднэстэ поласт ды пакшаст марто озномо «покштятьнень ланга». А кемиця московонь прявтне нейсть те пурнаксонть политикань алгакс ды тейсть кежей вешнема. Ды лись, истямо пурнавксось ульнесь ауль васенце, [[1580 ие]]нть малава эрзятне истяжо сакшность-пурнавкшность Чукалов.<ref name="Многоликая Мордовия"/> 
 {{Цитатань пе}}
 [[Артовкс:Rasjkenj Ozka- Modan kajamo.jpg|thumb|rihft|350px|Эрзянь Раськень Озкс, Чукало веле ''«Модань каямсто»'']]
 
