--- a/Куцян_веле_(Орданьбуе).mw
+++ b/Куцян_веле_(Орданьбуе).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Куцян веле
@@ -32,7 +31,7 @@
  |вид главы               = велень прявт
  |глава                   =
  |дата основания          = 
- |первое упоминание       = 1624 -1626
+ |первое упоминание       = 1624 ие
  |прежние имена           = 
  |статус с                = 
  |покшолмазо              = 
@@ -53,8 +52,8 @@
  |почтовый индекс         = 431851
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = 
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
