*Empty MediaWiki Message*

--- a/Орданьбуе_(Мордовия).mw
+++ b/Орданьбуе_(Мордовия).mw
@@ -83,8 +83,7 @@
 * [[Куцян веле (Орданьбуе)|Куцян веле]] ({{lang-ru|с. Кученяево}})
 * [[Лувне (Орданьбуе)|Лувне]] ({{lang-ru|с. Луньга}})
 * ({{lang-myv|?}}) ({{lang-ru|с. Луньгинский Майдан}})
-* [[Мадышка весеньце (Орданьбуе)|Мадышка васеньце]] ({{lang-ru|с. Манадыши 1-е}})
-* [[Мадышка омбоце (Орданьбуе)|Мадышка омбоце]] ({{lang-ru|с. Манадыши 2-е}})
+* [[Мадышка (Орданьбуе)|Мадышка]] ({{lang-ru|с. Манадыши 2-е}})
 * [[Пиксясь (Орданьбуе)|Пиксясь]] (лиякс кортыть: '''Пиксяська''', {{lang-ru|с. Пиксяси}})
 * [[Орозбие (Орданьбуе)|Орозбие]] ({{lang-ru|с. Урусово}})
 * [[Суроделе (Орданьбуе)|Суроделе]] (лиякс: Суродь Веле, {{lang-ru|д. Суродеевка}})
@@ -105,8 +104,10 @@
 * [[Жаренки (Орданьбуе)|Жаренки]] ({{lang-ru|с. Жаренки}})
 * [[Красные Поляны (Орданьбуе)|Красные Поляны]] ({{lang-ru|с. Красные Поляны}})
 * [[Куракино (Орданьбуе)|Куракино]] ({{lang-ru|с. Куракино}})
+* [[Манадыши первое (Орданьбуе)|Манадыши первое]] ({{lang-ru|с. Манадыши 1-е}})
 * [[Малое Кузьмино (Орданьбуе)|Малое Кузьмино]] ({{lang-ru|с. Малое Кузьмино}})
 * [[Малые Горки (Орданьбуе)|Малые Горки]] ({{lang-ru|д. Малые Горки}}
+* [[Мадышка весеньце (Орданьбуе)|Мадышка васеньце]] ({{lang-ru|с. Манадыши 1-е}})
 * [[Михайловка (Орданьбуе)|Михайловка]] ({{lang-ru|с. Михайловка}})
 * [[Мокровка (Орданьбуе)|Мокровка]] ({{lang-ru|п. Мокровка}})
 * [[Неусыпаевка (Орданьбуе)|Неусыпаевка]] ({{lang-ru|с. Неусыпаевка}})
