--- a/Куксина_(Меремяэ_буе).mw
+++ b/Куксина_(Меремяэ_буе).mw
@@ -11,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 57.728937|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 27.398063|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
