--- a/Кортамо:Куснетцова_(Меремяэ_буе).mw
+++ b/Кортамо:Куснетцова_(Меремяэ_буе).mw
@@ -1,1 +1,3 @@
 [[User:‎Erzianj jurnalist|Andü]], estenj kelsě uli gaittj "Ц"? Paräk erävi sörmadomo "Куснетсова", "Обинитса"? --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 17:40, 24 Чадыковонь 2016 (UTC)
+<br />
+* Shumbrachi, [[User:‎Kaftaj|Kaftaj]]! Arsän synst  '''ts''', avolj '''Ц''' (tc?). Te a vejke... --[[Теиця:Erzianj jurnalist|Erzianj jurnalist]] ([[Теицянь кортамось:Erzianj jurnalist|обсуждение]]) 17:45, 24 Чадыковонь 2016 (UTC)
