*Empty MediaWiki Message*

--- a/Кортамо:Куснетцова_(Меремяэ_буе).mw
+++ b/Кортамо:Куснетцова_(Меремяэ_буе).mw
@@ -1,3 +1,4 @@
 [[User:‎Erzianj jurnalist|Andü]], estenj kelsě uli gaittj "Ц"? Paräk erävi sörmadomo "Куснетсова", "Обинитса"? --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 17:40, 24 Чадыковонь 2016 (UTC)
 <br />
 * Shumbrachi, [[User:‎Kaftaj|Kaftaj]]! Arsän synst  '''ts''', avolj '''Ц''' (tc?). Te a vejke... --[[Теиця:Erzianj jurnalist|Erzianj jurnalist]] ([[Теицянь кортамось:Erzianj jurnalist|обсуждение]]) 17:45, 24 Чадыковонь 2016 (UTC)
+** Mon ezinj mue mezeäk diftongatnede "TS/TC" tesě [http://www.eki.ee/knn/ungegn/un7_gdl.htm#122 Estenj kel]. Ansäk "S":de - te tešksesj paräk lovnomo Z:ks. --[[Теиця:Kaftaj|Kaftaj]] ([[Теицянь кортамось:Kaftaj|обсуждение]]) 18:14, 24 Чадыковонь 2016 (UTC)
