*Empty MediaWiki Message*

--- a/Орданьбуе_(Тумобуе).mw
+++ b/Орданьбуе_(Тумобуе).mw
@@ -64,6 +64,6 @@
 Ашти Крутелей лангсо.
 
 
-[[Category:Мордовиянь велеть|П]]
-[[Category:Тумобуень велеть|П]]
+[[Category:Мордовиянь велеть|О]]
+[[Category:Тумобуень велеть|О]]
 [[Category:Эрзянь велеть]]
