*Empty MediaWiki Message*

--- a/Орданьбуе_(смустьтне).mw
+++ b/Орданьбуе_(смустьтне).mw
@@ -5,6 +5,7 @@
 * [[Орданьбуе (ош, Орданьбуе)|Орданьбуе]] — ош [[Орданьбуе]]сэ, [[Мордовия]]со.
 * [[Орданьбуе (Тумобуе)|Орданьбуе]] — веле [[Тумобуе]]сэ, [[Мордовия]]со.
 * [[Орданьбуе|Орданьбуе]] — буе [[Мордовия]]со, [[Россия]]со.
+* [[Ташто Орданьбие (Орданьбуе)|Ташто Орданьбие]] — веле [[Орданьбуе]]сэ, [[Мордовия]]со.
 
 
 __DISAMBIG__
