*Empty MediaWiki Message*

--- a/Кармалей.mw
+++ b/Кармалей.mw
@@ -7,7 +7,7 @@
   |артовксонть эйсте      = 
  |Кувалма                 = 12
  |Площадь бассейна        =  
- |Бассейн                 = Меня/Сура лей/Рав/Каспиянь иневедь
+ |Бассейн                 = Меня лей/Сура лей/Рав/Каспиянь иневедь
  |Ведень ютавтовкс        = 
   |Онкстамо тарка         = 
  |Лейбря                  = 
