*Empty MediaWiki Message*

--- a/Орданьбуе_(смустьтне).mw
+++ b/Орданьбуе_(смустьтне).mw
@@ -1,6 +1,6 @@
 '''Орданьбуе''':
 
-;Топоним
+;Топонимт
 * [[Орданьбуе (Орданьбуе)|Орданьбуе]] — чугункань станция (станция Ардатов) [[Орданьбуе]]сэ, [[Мордовия]]со.
 * [[Орданьбуе (ош, Орданьбуе)|Орданьбуе]] — ош [[Орданьбуе]]сэ, [[Мордовия]]со.
 * [[Орданьбуе (Тумобуе)|Орданьбуе]] — веле [[Тумобуе]]сэ, [[Мордовия]]со.
