*Empty MediaWiki Message*

--- a/Малые_Манадыши_(Отяжбуе).mw
+++ b/Малые_Манадыши_(Отяжбуе).mw
@@ -1,6 +1,6 @@
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Вишка Манадыши
+ |Эрзянь лем              = Манадышка
  |оригинальное название   = {{Lang-ru|Малые Манадыши}}
  |изображение             = 
  |подчинение              = 
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Вишка Манадыши''' ({{Lang-ru|Малые Манадыши}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Манадышка''' ({{Lang-ru|Малые Манадыши}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
