*Empty MediaWiki Message*

--- a/Ташто_Орданьбие_(Орданьбуе).mw
+++ b/Ташто_Орданьбие_(Орданьбуе).mw
@@ -66,7 +66,7 @@
 Эрицятнеде: 1085 лом. (1863 ие), 2407 лом. (1913 ие), 2096 лом. (1931 ие), 408 лом. (2001 ие), 369 лом. (2002 ие), 305 лом. (2010 ие), 293 лом. (2012 ие), 296 лом. (2013 ие).
 
 == Веленть лемденть  ==
-Лемесь–антропоним<ref name="Память, запечатленная в слове"/>, ''Ардат'' (''Ордат'', ''Ордатка'') кезэрень эрзянь лемтнестэ, конань смустест '''ордадомс''' ({{Lang-ru|«надуться, рассердиться»}}).
+Лемесь–антропоним<ref name="Память, запечатленная в слове"/>, ''Ардат'' (''Ордат'', ''Ордатка'') кезэрень эрзянь лемтнестэ, конань смустесь '''ордадомс''' ({{Lang-ru|«надуться, рассердиться»}}).
 
 == Веленть эрямозо  ==
 
