*Empty MediaWiki Message*

--- a/Малые_Манадыши_(Отяжбуе).mw
+++ b/Малые_Манадыши_(Отяжбуе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Манадыши (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Манадышка
@@ -39,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 43
+  |эрицятне               = 42<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,7 +59,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Манадышка''' ({{Lang-ru|Малые Манадыши}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Манадышка<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Малые Манадыши}}) — рузонь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+Ашти [[Штырма лей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Малые Манадыши — 100<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ ''. Лиякс лецтяви кода '''Мома­дышева, Момадышевская выставка'''. 
+
+== Веленть лемденть  ==
+Лемесь–антропоним<ref name="Память, запечатленная в слове"/>, кезэрень эрзянь ''Мадышка'' лемесь саеви {{Lang-myv|мадемс}} валстонть, конань смустесь ({{Lang-ru| «уснуть, спать»}}).
+
+== Сёрм.: ==
+<references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
