--- a/Манадыши_(смустьтне).mw
+++ b/Манадыши_(смустьтне).mw
@@ -3,7 +3,7 @@
 ;Топонимт
 * [[Мадышка (Орданьбуе)|Мадышка]] — эрзянь веле [[Орданьбуе]]сэ, [[Мордовия]]со.
 * [[Манадыши первое (Орданьбуе))|Манадыши первое]] — эрзянь веле [[Орданьбуе]]сэ, [[Мордовия]]со.
-* [[Малые Манадыши (Отяжбуе)|Манадышка]] — эрзянь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+* [[Малые Манадыши (Отяжбуе)|Манадышка]] — рузонь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 * [[Манадыши (Отяжбуе)|Манадыши ]] — рузонь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 
