*Empty MediaWiki Message*

--- a/Покш_Манадыши.mw
+++ b/Покш_Манадыши.mw
@@ -59,7 +59,20 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Покш Манадыши''' ({{Lang-ru|Большие Манадыши}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Покш Манадыши''' ({{Lang-ru|Большие Манадыши}}) — рузонь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
-[[Category:Мордовиянь велеть]]
-[[Category:Отяжбуень велеть]]
+Ашти [[Вацярлей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Большие Манадыши  — 78<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ ''. ({{Lang-ru|«Атемарские писцовые книги 1640 – 1641 годов»}}) лецти Манадыши веленть кода эрзянь.
+
+
+== Веленть лемденть  ==
+Лемесь–антропоним, ''Монадыша'' (''Мадышка'') кезэрень эрзянь лемстэ, сон мукшневи [[ХVII пинге]]нь эрзянь ловнома ды актонь конёвсо<ref name="Память, запечатленная в слове"/>.
+
+== Веленть эрямозо  ==
+
+==Содавикс ломанть те велестэнть==
+
+== Сёрм.: ==
+<references />
+
+[[Category:Мордовиянь велеть|М]]
+[[Category:Отяжбуень велеть|М]]
