*Empty MediaWiki Message*

--- a/Шугур_веле_(Покш_Килейбуе).mw
+++ b/Шугур_веле_(Покш_Килейбуе).mw
@@ -61,7 +61,7 @@
 }}
 '''Шугур веле''' (лиякс: '''Чугыр веле'''<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>) ({{Lang-ru|с. Шугурово}}) — эрзянь-рузонь веле [[Покш Килейбуе]]сэ, [[Мордовия]]со. 
 
-Ашти [[Дожга]] лей лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Шугурово — 370<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ ''. 
+Ашти [[Дожга лей]] лангсо. Лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) ''Шугурово — 370<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ ''. 
 
 == Веленть лемденть  ==
 Лемесь-антропоним: икелень эрзянь ''Шугурко Аксарин''<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лементь эйстэ, кона саеви {{Lang-tt|шекерь}} ({{Lang-ru|«слова, благодарение»}}). 
