*Empty MediaWiki Message*

--- a/Дягилевка_веле_(Покш_Килейбуе).mw
+++ b/Дягилевка_веле_(Покш_Килейбуе).mw
@@ -79,6 +79,6 @@
 == Сёрм.: ==
 <references />
 
-[[Category:Мордовиянь велеть|Г]]
-[[Category:Покш Килейбуень велеть|Г]]
+[[Category:Мордовиянь велеть|Д]]
+[[Category:Покш Килейбуень велеть|Д]]
 [[Category:Эрзянь велеть]]
