*Empty MediaWiki Message*

--- a/Дягилевка_веле_(Покш_Килейбуе).mw
+++ b/Дягилевка_веле_(Покш_Килейбуе).mw
@@ -62,7 +62,7 @@
 
 Ашти [[Пиксаур лей]] лангсо, кона Большая Кша леенть сянглей. 
 Кода лецтяви:
-{{Цитатань ушодома}}({{Lang-ru|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Дегилевка (Новый Косогор) – веле 135 кудот марто Саранонь уездсэ''.
+{{Цитатань ушодома}}({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Дегилевка (Новый Косогор) – веле 135 кудот марто Саранонь уездсэ''.
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Дегилевка (Новый Косогор), деревня из 135 дворов  Саранского уезда.}}
 {{Цитатань пе}}
 Велесь ульнесь путозь-теезь [[1614 ие]]стэ<ref>[http://zakon.scli.ru/ru/legal_texts/list_statutes/index.php?do4=document&id4=7d35f9ff-b4b9-4ce4-9d47-9dbf68d6ffd3  Нормативные правовые акты Российской Федерации :: Реестр уставов муниципальных образований: УСТАВ ГУЗЫНСКОГО СЕЛЬСКОГО СОВЕТА ДЕПУТАТОВ БОЛЬШЕБЕРЕЗНИКОВСКОГО РАЙОНА РЕСПУБЛИКИ МОРДОВИЯ] {{ref-ru}}</ref>.
