*Empty MediaWiki Message*

--- a/Баеньбуе_(Орданьбуе).mw
+++ b/Баеньбуе_(Орданьбуе).mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 54|lat_min = 50|lat_sec = 19
-  |lon_dir = |lon_deg = 46|lon_min = 22|lon_sec = 10
+  |lat_dir = |lat_deg = 54.83203968493095|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 46.368141174316406|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -40,8 +40,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 1834<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
   |национальный состав    = [[эрзят]]
@@ -60,11 +60,25 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Баево (смустьтне)}}
-'''Баеньбуе''' ({{lang-ru|Баево}}) — эрзянь веле [[Орданьбуе]]сэ, [[Мордовия]]со.
+'''Баеньбуе''' ({{lang-ru|Баево}}) — эрзянь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/187 Геопортал РГО: с. Баево] {{Ref-ru}}</ref> веле [[Орданьбуе]]сэ, [[Мордовия]]со.
+
+Велесь ашти [[Лаша лей]] лангсо. Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> Баеньбуесь лецтяви:
+{{Цитатань ушодома}}([[1863 ие]]) ''Баеньбуе – веле 89 кудот марто Ордань уездсэ''.
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Баево, село из 89 дворов  Алатырского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: 1415 лом. ([[1913 ие]]), 	1862лом ([[2002 ие]]),	1834 лом. (2010 ие).
+
+== Веленть лемденть  ==
+Лемесь–антропоним: '''Баюш''' лемстэнть. 1696 иестэ, сёрмадстома книгасо лецтяви: ({{lang-ru|«Деревня Баева Подгородная на реке Ладыге, а в ней мордовских Суродяевы жилых дворов: дв. Пятрунка ды Биюшка»<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>}}) 
+
+
 
 ==Содавикс ломанть те велестэнть==
 Баеньбуе велесэнть чачсть:
 * [[Степан Эрьзя]]  — Эрзянь Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця.
+* И. С. Китайкин   —  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}). 
+*  Н. Ф. Рузавин   — операсо морыця.
 
 == Сёрм.: ==
 <references />
