--- a/Баево_(смустьтне).mw
+++ b/Баево_(смустьтне).mw
@@ -5,6 +5,7 @@
 * [[Баево (Ицял буе)|Баево]] — веле [[Ицял буе]]сэ [[Мордовия]]со.
 * [[Баеньбуе (Орданьбуе)|Баеньбуе]] — эрзянь веле [[Орданьбуе]]сэ, [[Мордовия]]со.
 * [[Баеньбие (Теньгушбуе)|Баеньбие]] — эрзянь веле [[Теньгушбуе]]сэ, [[Мордовия]]со.
+* [[Старое Баево (Отяжбуе)|Старое Баево]] — рузонь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 
 __DISAMBIG__
