*Empty MediaWiki Message*

--- a/Баево_(Ицял_буе).mw
+++ b/Баево_(Ицял_буе).mw
@@ -31,7 +31,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   = 
- |дата основания          = 
+ |дата основания          = 1614 ие
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
@@ -59,7 +59,20 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Баево'''  —  велесь [[Ицял буе|Ицял буесэ]].
+'''Баево'''  — рузонь велесь [[Ицял буе|Ицял буесэ]], [[Мордовия]]со.
+
+Велесь ашти [[Инесаро лей]] лангсо. Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> Баево лецтяви:
+{{Цитатань ушодома}}([[1859 ие]]) ''Баево – веле 76 кудот марто Ордань уездсэ''.
+{{oq|ru|В «СНМ  Нижегородской губернии» (1859) – Баево, деревня из 76 дворов  Лукояновского уезда.}}
+{{Цитатань пе}}
+Ульнесь путозь Ташто Баевасто сазь эрицятнесэ [[1614 ие]]нть видс . 
+
+== Веленть лемденть  ==
+
+==Содавикс ломанть те велестэнть==
+Баева велесэнть чачсть:
+
+
 
 == Сёрм.: ==
 <references />
