*Empty MediaWiki Message*

--- a/Симкина_веле_(Покш_Килейбуе).mw
+++ b/Симкина_веле_(Покш_Килейбуе).mw
@@ -1,4 +1,4 @@
-<br />
+{{Лия смустьтне|Симкино (смустьтне)}}<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Симкина
@@ -32,7 +32,7 @@
  |вид главы               = 
  |глава                   = Астайкина Любовь Ивановна 
  |дата основания          = 1704
- |первое упоминание       = 1704 седе икеле
+ |первое упоминание       = 1704
  |прежние имена           = 
  |статус с                = 
  |покшолмазо              = 
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 399
+  |эрицятне               = 399<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,14 +59,38 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Симкина веле''' ({{Lang-ru|Симкино}}) — эрзянь веле [[Покш Килейбуе]]сэ, [[Мордовия]]со. 
+'''Симкина веле''' ({{Lang-ru|Симкино}}) — эрзянь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/385 Геопортал РГО: с. Симкино] {{Ref-ru}}</ref> веле [[Покш Килейбуе]]сэ, [[Мордовия]]со. 
 
 Ашти [[Чермелей]] ланксо, 20 [[вайгельпе|вп]] буень куншкатаркасто ды 48 вп Чамзинкань чугункасто.  
+Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> Симкина велесь лецтяви:
+{{Цитатань ушодома}}([[1863 ие]]) ''Симкина – веле 194 кудот марто Ордань уездсэ''.
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Симкино, деревня из 194 дворов  Ардатовского уезда.}}
+{{Цитатань пе}}
+
 [[1931 ие]]стэ тесэ эрясть 1 670 ломанть, ней  399 (2010 иень ловномась).
+
+== Веленть лемденть  ==
+Лемесь–антропоним. Саеви '''Симки Мемешев''' лемстэнть, кона лецтяви: ({{lang-ru|«Книга сбора оброка с пчельных заводов с ясашной мордвы Саранского уезда за 1704 год»<ref name="ДМ">Документы и материалы по истории Мордовской АССР, 1953,  т. 3,   ч. 2, с. 37 {{ref-ru}}, {{ref-myv}}</ref>}}) 
 
 ==Содавикс ломанть те велестэнть==
 Симкина велесэ чачсть:
-* [[Ишуткинэнь Николай]] — содавикс эрзянь валморозей.
+* [[Ишуткинэнь Николай]] — содавикс эрзянь валморозей, [[«Чилисема» (журнал)|«Чилисема» ковставксонть]] прявт редактор
+* И. П. Адушкин, Н.В. Зинов — Советэнь Союзонь Маралят ({{Lang-ru|Герои Советского Союза}})
+* В.И. Богатов —  ({{Lang-ru|заслуженный работник народного образования Республики Мордовия}}) 
+* Н.Я. Назаркин — врач 
+* И.П. Астайкин, В.С. Учайкин — советэнь-партиянь прявт
+* А.П. Лавровской, Р.В. Макаркиной —  тонавтыцят
+
+==Веленть эрямодонть==
+Велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> : [[Баба Васянь эрьке]], ''Симкина ёно пакся'', ''Симкинань латко'', ''Синдяров'', ''[[Стариця]]'', ''Сэрей грива'', ''Татаронь поробка'', ''Ташто Суро'', ''Торф болота'', ''Тросной'', ''Тросной эрьке'', ''Тумопуло'', ''Тунель пандо'', ''Тюжа эрьке'', ''Тюжа эрьке удалкс'', ''Чеймарь эрьке'', ''Чёрный луг'', ''Чеча'', ''Човар латко'', ''Ягодной'', ''Янгай''. 
+<br />
+курот: ''Алопе'',  ''Сэдьбе'', ''Cэдьпе'',  ''Удало ульця'', ''Фарваз'', ''Цеця ульця'', ''Эрзя велине''.<br />
+
+Веленть вакссо ули кшнинь пингень ошке.
+
+
+== Сёрм.: ==
+<references />
 
 [[Category:Мордовиянь велеть|С]]
 [[Category:Покш Килейбуень велеть|С]]
